--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 altair==6.0.0
+astral==3.2
 attrs==25.4.0
 blinker==1.9.0
 branca==0.8.2
@@ -26,12 +27,14 @@ polyline==2.0.4
 protobuf==6.33.2
 pyarrow==22.0.0
 pydeck==0.9.1
+pyproj==3.7.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytz==2025.2
 referencing==0.37.0
 requests==2.32.5
 rpds-py==0.30.0
+shapely==2.1.2
 six==1.17.0
 smmap==5.0.2
 streamlit==1.52.2
