--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,11 @@ cachetools==6.2.4
 certifi==2026.1.4
 charset-normalizer==3.4.4
 click==8.3.1
+contourpy==1.3.3
+cycler==0.12.1
 fastkml==1.4.0
 folium==0.20.0
+fonttools==4.61.1
 geographiclib==2.1
 geopy==2.4.1
 gitdb==4.0.12
@@ -20,8 +23,10 @@ idna==3.11
 Jinja2==3.1.6
 jsonschema==4.26.0
 jsonschema-specifications==2025.9.1
+kiwisolver==1.4.9
 lxml==6.0.2
 MarkupSafe==3.0.3
+matplotlib==3.10.8
 narwhals==2.15.0
 numpy==2.4.0
 packaging==25.0
@@ -33,6 +38,7 @@ protobuf==6.33.2
 pyarrow==22.0.0
 pydeck==0.9.1
 pygeoif==1.6.0
+pyparsing==3.3.1
 pyproj==3.7.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
