Added back sun angle legend, better state and county handling for disaster declaration. Still working to convert entire web page (status, start and home) for the streamlit app to https.

--- a/cdk/service/idle-shutdown.service
+++ b/cdk/service/idle-shutdown.service
@@ -1,15 +1,16 @@
 [Unit]
 Description=Idle Shutdown Monitor
 After=network.target
-Wants=network.target
 
 [Service]
 Type=simple
 ExecStart=/usr/local/bin/idle_shutdown.sh
-Restart=always
+Restart=on-failure
 RestartSec=10
-StandardOutput=append:/var/log/idle-shutdown.log
-StandardError=append:/var/log/idle-shutdown.log
+
+# Prevent duplicate processes
+PIDFile=/run/idle-shutdown.pid
+KillMode=process
 
 [Install]
 WantedBy=multi-user.target
