--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ astral==3.2
 attrs==25.4.0
 beautifulsoup4==4.14.3
 blinker==1.9.0
+boto3==1.42.29
+botocore==1.42.29
 branca==0.8.2
 bs4==0.0.2
 cachetools==6.2.4
@@ -21,6 +23,7 @@ gitdb==4.0.12
 GitPython==3.1.46
 idna==3.11
 Jinja2==3.1.6
+jmespath==1.0.1
 jsonschema==4.26.0
 jsonschema-specifications==2025.9.1
 kiwisolver==1.4.9
@@ -46,6 +49,7 @@ pytz==2025.2
 referencing==0.37.0
 requests==2.32.5
 rpds-py==0.30.0
+s3transfer==0.16.0
 shapely==2.1.2
 six==1.17.0
 smmap==5.0.2
