--- a/cdk/service/streamlit.service
+++ b/cdk/service/streamlit.service
@@ -11,6 +11,9 @@ WorkingDirectory=/home/ec2-user/HousingPlanner
 Environment="AWS_DEFAULT_REGION=us-east-1"
 Environment="STORAGE_BUCKET_PREFIX=__STORAGE_BUCKET_PREFIX__"
 Environment="STORAGE_BUCKET_PREFIX_PARAM=__STORAGE_BUCKET_PREFIX_PARAM__"
+Environment="COGNITO_DOMAIN=__COGNITO_DOMAIN__"
+Environment="COGNITO_CLIENT_ID=__COGNITO_CLIENT_ID__"
+Environment="APP_DOMAIN=__APP_DOMAIN__"
 # Pull latest code on every start (keeps instance up-to-date after restarts)
 ExecStartPre=/bin/bash -c 'cd /home/ec2-user/HousingPlanner && git pull --ff-only'
 # Fetch API keys from Secrets Manager
