This commit includes several updates and additions to the application:
### Changed Files

- `.gitignore`: Added patterns to ignore deprecated directories, Git Commit Generator script, and archives.
- `README.md`: Added an environment variable for the FCC API key.
- `app.py`: Added a section to render the service availability UI.
- `assistant/ui.py`: Updated cost recording and pricing logic, refactored profile selection UI.
- `cdk/README.md`: Added instructions to create AWS Secrets Manager secrets for FCC API credentials.
- `commute/infra_providers.py`: Added API usage cost recording for Waze traffic alerts.
- `commute/logic.py`: Added distance and duration to commute leg metadata.
- `commute/providers.py`: Added API usage cost recording for routing providers.
- `commute/ui.py`: Added distance and duration columns to the commute table, improved map rendering for commute legs.
- `config/pricing.py`: Refactored pricing data loading, added API pricing entries.
- `hoa/ui.py`: Updated cost recording and pricing logic.
- `locations/providers.py`: Added API usage cost recording for geocoding.
- `mortgage/chatbot.py`: Updated cost recording and pricing logic.
- `profile/costs.py`: Added functions to record API usage costs and recalculate total costs.
- `profile/state_io.py`: Added persistence for API usage cost records.
- `profile/ui.py`: Added rendering for API usage costs.
- `requirements.txt`: Updated Python dependencies.
- `schools/providers.py`: Added API usage cost recording for Google Places searches.
- `schools/ui.py`: Improved school categorization and map rendering, added review site link validation.
- `service_availability/providers.py`: Added functions to fetch grocery and pharmacy locations using Google Places.
- `service_availability/ui.py`: Added tabs for grocery and pharmacy locations, improved map rendering and data fetching workflow.
- `zillow/providers.py`: Added API usage cost recording for Zillow searches.
- `zillow/ui.py`: Added rendering for listing h

--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,21 @@ cdk.out
 # Local profile data
 data/
 
+# Deprecated directories - files now stored in /tmp
+app/
+coverage_test_extracted/
+fcc_cache/
+fcc_downloads/
+
 # JetBrains IDE settings
 .idea
 
 # Reference Materials
 reference
+
+# Git Commit Generator
+git_commit_summary.py
+
+# Archives
+*.zip
+*.gpkg.zip
