--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+affine==2.4.0
 altair==6.0.0
 arrow==1.4.0
 astral==3.2
@@ -9,19 +10,26 @@ botocore==1.42.29
 branca==0.8.2
 bs4==0.0.2
 cachetools==6.2.4
+cattrs==25.3.0
 certifi==2026.1.4
 charset-normalizer==3.4.4
 click==8.3.1
+click-plugins==1.1.1.2
+cligj==0.7.2
 contourpy==1.3.3
 cycler==0.12.1
 fastkml==1.4.0
+fiona==1.10.1
 folium==0.20.0
 fonttools==4.61.1
 geographiclib==2.1
+geopandas==1.1.2
 geopy==2.4.1
+git-filter-repo==2.47.0
 gitdb==4.0.12
 GitPython==3.1.46
 idna==3.11
+importlib_resources==6.5.2
 Jinja2==3.1.6
 jmespath==1.0.1
 jsonschema==4.26.0
@@ -38,14 +46,17 @@ pillow==12.1.0
 plotly==6.5.1
 polyline==2.0.4
 protobuf==6.33.2
+publication==0.0.3
 pyarrow==22.0.0
 pydeck==0.9.1
 pygeoif==1.6.0
+pyogrio==0.12.1
 pyparsing==3.3.1
 pyproj==3.7.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytz==2025.2
+rasterio==1.5.0
 referencing==0.37.0
 requests==2.32.5
 rpds-py==0.30.0
@@ -59,6 +70,7 @@ streamlit-folium==0.26.0
 tenacity==9.1.2
 toml==0.10.2
 tornado==6.5.4
+typeguard==2.13.3
 typing_extensions==4.15.0
 tzdata==2025.3
 urllib3==2.6.3
